helm/vibecode/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vibecode-db
  namespace: vibecode
spec:
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: database
